@@ -1,3 +1,8 @@
+2002-02-08  Yuji Abe <cbo46560@pop12.odn.ne.jp>
+
+	* [w3m-dev 03017] URI scheme is case insensitive
+	* url.c (searchURIMethods): s/strcmp/strcasecmp/
+
 2002-02-08  Tsutomu Okada <okada@furuno.co.jp>
 
 	* [w3m-dev 03011] segmentation fault on <input> tag without <form>
@@ -2875,4 +2880,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.307 2002/02/08 11:18:10 ukai Exp $
+$Id: ChangeLog,v 1.308 2002/02/08 11:20:14 ukai Exp $
